# micrograd.cpp

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md  flake.nix
src/: engine.cpp  engine.hpp
tests/: test_engine.cpp
